# IFC_Apps

./: .gitignore  Dockerfile  README (1).md  README (2).md  README (3).md  README.md  app (1).py  app (2).py  app (3).py  app.py  check_definitions_loader.py  classification_writer.py  expression_engine.py  field_access.py  ifc_qa_service.py  mapping_store.py  packages.txt  requirements (1).txt  requirements.txt  validation.py
backend/: ifc_area_spaces.py  ifc_area_spaces_router.py  ifc_file_size_reducer.py  ifc_jobs.py  ifc_move_rotate.py  ifc_worker.py  project_tables.py
cobieqc_service/: __init__.py  bootstrap.py  jobs.py  runner.py  security.py
config/: check_expressions.json  check_field_mappings.json  dfe_model_check_requirements.json  sample_model_checks.xlsx
data/: ifc2x3_pset_applicability.json
deploy/: nginx.conf
docs/: civil3d_extended_profile.md  cobieqc-resource-folder-bootstrap.md  ifc_excel_extraction_performance_report.md  memory-safe-architecture.md
ifc_app/: __init__.py
resources/: configfile.ini
scripts/: bootstrap_cobieqc.sh  build_ifc2x3_pset_library.py  validate_ifc_qa_zip.py
static/: app.js  cleaner.html  cobieqc.js  excel.html  globalz.html  ifc_file_size_reducer.js  ifc_move_rotate.js  ifc_qa_app.js  index.html  levels.html  mappings.js  (+8 more)
step2ifc/: README.md  classmap.yaml  pyproject.toml
step2ifc/step2ifc/: __init__.py  auto.py  cli.py  config.py  geometry.py  heuristics.py  ifc_writer.py  io_step.py  logging.py  mapping.py  qc.py
step2ifc/tests/: test_guid_determinism.py  test_name_normalization.py  test_yaml_parsing.py
(+66 files in other folders)
